--- a/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/softphone.html
@@ -8,10 +8,15 @@
     <div id='hn-phone-frame' style='display:none'>
     <h2>Hypernumbers SoftPhone</h2>
     <hr />
-    <div id='hn-phone-headline'></div>
-    <div id='hn-phone-msg'></div>
+    <div id='hn-phone-headline' class='hn-phone-text'></div>
+    <div id='hn-phone-to' class='hn-phone-text2'></div>
+    <div id='hn-phone-from' class='hn-phone-text2'></div>
+    <div id='hn-phone-cc' class='hn-phone-text2'></div>
+    <div id='hn-phone-subject' class='hn-phone-text2'></div>
+    <div id='hn-phone-contents' class='hn-phone-text2'></div>
+    <div id='hn-phone-msg' class='hn-phone-text'></div>
     <button id='hn-phone' disabled>
-      <div id='hn-phone-img'>Phone</div>
+      <div class='hn-phone-img hn-phone-button'>Phone</div>
     </button>
     <div id='hn-phone-response'></div>
     </div>
