--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -795,12 +795,18 @@ table.tablesorter tbody tr.highlight td {
     float:      left;
 }
 
-.fonts a, .site a {
+.insertgroup {
+               padding : 3px 0px 0px 3px;
+               size    : 120%;
+               color   : #666;
+}
+
+.insert a, .edit a, .fonts a, .site a {
  display: block;
  padding: 2px 5px;
 }
 
-.fonts a:hover, .site a:hover {
+.insert a:hover, .edit a:hover, .fonts a:hover, .site a:hover {
     background: -moz-linear-gradient(center top , #EEE, #BBB) repeat scroll 0 0 transparent;
     background: -webkit-linear-gradient(linear, 0 40%, 0 70% from(#EEE), to(#BBB));
 }
@@ -1058,11 +1064,11 @@ a.toolbar-item {
     list-style-type : none;
 }
 
-#gridcontextmenu .disabled a.hover {
- background: #f8f7f6;
+#editmenulist .disabled:hover, #gridcontextmenu .disabled a.hover {
+ background: #f8f7f6 !important;
 }
 
-#gridcontextmenu .disabled a {
+#editmenulist .disabled, #gridcontextmenu .disabled a {
  color: #AAA;
 }
 
