--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -96,7 +96,7 @@
       </div>
       </div>
       <a class="separator"></a>
-      <div class="expand edit" id="editmenu">
+      <div class="expand edit" id="editmenu1">
         <span id="editmenuwrap">Edit</span>
       <div id="editmenulist" class="expandinner">
       <a name="clearboth">Clear <b>All</b></a>
@@ -280,6 +280,12 @@
       <a class="separator"></a>
       <a title="Merge Cells" class="toolbar-item" id="mergecells"></a>
       <a class="separator"></a>
+      <a title="Make Wiki Input" class="toolbar-item" id="inlineinput"></a>
+      <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
+    <a class="separator"></a>
+      <div class="expand forms" id="formsmenu">
+        <span id="formsmenuwrap">Forms</span>
+      <div id="formsmenulist" class="expandinner">
 
       <a title="Add Input Field" class="toolbar-item" id="forminput"
 	data-input="input" data-default="'default label'"></a>
@@ -292,10 +298,8 @@
       <a title="Add Radio Butttons" class="toolbar-item" id="formradio"
 	data-input="radio" data-default="'default label', {1,2,3}"></a>
       <a title="Add Submit Button" class="toolbar-item" id="formbutton"></a>
-
-      <a class="separator"></a>
-      <a title="Make Wiki Input" class="toolbar-item" id="inlineinput"></a>
-      <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
+        </div>
+        </div>
       <a class="separator hn_hidden"></a>
       <a title="User Defined Functions" class="toolbar-item hn_hidden" id="hn_userdeffns"></a>
       <div id="typepanel">
