fix for login box bug

--- a/lib/hypernumbers-1.0/priv/core_install/views/401.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/401.html
@@ -32,7 +32,7 @@
           <span class='numbers'>numbers</span>
         </div>
 
-        <div id='editmenu' class='ctrlbox'>
+        <div id='editingmenu' class='ctrlbox'>
           <div id='editloggedin'>
             <span id='uname'></span> | <a id='logout'>logout</a>
             <ul>
