--- a/lib/hypernumbers-1.0/priv/core_install/views/table.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/table.html
@@ -54,7 +54,7 @@
         <span class='hyper'>hyper</span><span class='numbers'>numbers</span>
     </div>
 
-    <div id='editmenu' class='ctrlbox'>
+    <div id='editingmenu' class='ctrlbox'>
         <div id='editloggedin'>
           <div id='uname'></div>
         <div id='allowedviews'></div>
