--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -650,19 +650,19 @@ label {
 
 .hn_html_preview
  {
-  font-size:        60%;
+  font-size:        90%;
   font-weight:      bold;
   background-color: #EEE;
   background: -webkit-gradient(linear, 0 40%, 0 70%, from(#EEE),
-                                 to(#DDD));
+                                 to(#CCC));
   background: -moz-linear-gradient(center top , #EEE,
-                                     #DDD) repeat scroll 0 0 transparent;
+                                     #CCC) repeat scroll 0 0 transparent;
   color:            #777;
   margin:           2px;
   padding:          1px 1px 1px 1px;
   -moz-border-radius:    4px 4px 4px 4px;
   -webkit-border-radius: 4px 4px 4px 4px;
-  border:           1px solid #E99;
+  border:           2px solid #E99;
   }
 
 .hn-include {
