Renamed 'New Pages..' menu to 'New/Open Pages...'

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -80,7 +80,7 @@
       <div class="expand site" id="sitemenu">
         <span id="sitemenuwrap">Site</span>
       <div id="sitemenulist" class="expandinner">
-      <a name="sitemypages">New Page...</a>
+      <a name="sitemypages">New/Open Page...</a>
       <a name="sitedelete">Delete Page</a>
       <a name="sitesaveastemplate">Save As Template...</a>
       <a name="siteuploadxls">Upload .xls File...</a>
