tweaks to include fn

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -668,8 +668,8 @@ label {
 .hn-include {
               font-size:  12px;
               height: auto;
-              background-color: #F00;
               color: #FFF;
+              background-color: #79bd8f;
               width: auto;
               padding:          4px 4px 4px 4px;
               -moz-border-radius:    4px 4px 4px 4px;
