Added Google Docs/Edit Grid like 'saving...' messages

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -276,6 +276,7 @@
       <a title="Merge Cells" class="toolbar-item" id="mergecells"></a>
       <a class="separator"></a>
       <a title="Make Wiki Input" class="toolbar-item" id="inlineinput"></a>
+      <a title="Make Wiki Rich Text Input" class="toolbar-item hn_hidden" id="inlinerichtextinput"></a>
       <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
     <a class="separator"></a>
       <div class="expand forms" id="formsmenu">
@@ -602,6 +603,8 @@
     <div id="loading">
       <img src="/img/loading2.gif" /> loading data...
     </div>
+
+    <div id="hn_save_msg"></div>
 
     <div id="pagespanel"><div id="hn-small-dialog-hdr"><span></span>
       <a id="pagesclose">x</a></div>
