--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -19,6 +19,27 @@ html,body {
     z-index  : 10000001;
 } */
 
+#hn_save_msg
+{
+  display               : none;
+  position              : absolute;
+  top                   : 50px;
+  right                 : 10%;
+  z-index               : 10000005;
+  background            : white;
+  color                 : #999;
+  font-weight           : bold;
+  height                : 20px;
+  width                 : 120px;
+  padding               : 3px 5px;
+  border                : 3px solid #eee;
+  -moz-border-radius    : 4px 4px 4px 4px;
+  -moz-box-shadow       : 2px 2px 4px #AAA;
+  -webkit-border-radius : 4px 4px 4px 4px;
+  -webkit-box-shadow    : 2px 2px 4px #AAA;
+
+}
+
 #loading {
     position   : absolute;
     top        : 10px;
@@ -960,6 +981,7 @@ a.toolbar-item {
 #formbutton  { background-position: -183px -82px; }
 
 #inlineinput { background-position: -205px -104px; }
+#inlinerichtextinput { background-position: -230px -41px; }
 #inlinedropdown { background-position: -228px -103px; }
 #hn_userdeffns { background-position: -228px -82px; }
 
