--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -642,6 +642,10 @@
 	<div id="sitemypages">
 
 	  <div id="finder">
+        <div class="hn_finder_instructions" >
+          <div>you can double-click the tree to open a page</div>
+          <!-- <div>right-click for other actions</div> -->
+        </div>
 	    <div class="panewrapper">
         <div class="pane"></div>
       </div>
