--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -799,7 +799,6 @@ table.tablesorter tbody tr.highlight td {
     background-color: transparent;
 }
 
-
 #toolbar {
     background: #EEE;
     background: -moz-linear-gradient(center top , #F9F9F9, #E3E3E3) repeat scroll 0 0 transparent;
@@ -1086,6 +1085,23 @@ a.toolbar-item {
     resize     : none;
 }
 
+.hn_gridcontextmenu_expand {
+  background : url(/hypernumbers/right.png) no-repeat right 2px;
+}
+
+.hn_gridcontextmenu_expand > a {
+   font-style  : italic;
+   color       : #222 !important;
+}
+
+.hn_gridcontextsubmenu
+{
+  display  : none;
+  position : absolute;
+  left     : 165px;
+  float    : right;
+}
+
 #axiscontextmenucol ul, #axiscontextmenurow ul, #gridcontextmenu ul {
     margin          : 0px;
     padding         : 0px;
@@ -1100,20 +1116,22 @@ a.toolbar-item {
  color: #AAA;
 }
 
-#axiscontextmenucol, #axiscontextmenurow, #gridcontextmenu {
+#axiscontextmenucol, #axiscontextmenurow,
+  #gridcontextmenu, .hn_gridcontextsubmenu {
  position:   absolute;
  display:    none;
  font-size:  11px;
  padding:    3px 2px;
  border:     1px outset #666;
  background: #FFF;
-z-index     : 10000002;
+ z-index     : 10000002;
 }
+
 #axiscontextmenucol, #axiscontextmenurow {
  width:      120px;
 }
 
-#gridcontextmenu {
+#gridcontextmenu, .hn_gridcontextsubmenu {
  width:      160px;
 }
 
@@ -1121,12 +1139,17 @@ z-index     : 10000002;
     margin-left: 0px;
 }
 
+#gridcontextmenu > ul > li > ul > li > a {
+    font-style  : normal;
+    font-weight : normal;
+}
+
 #axiscontextmenucol a, #axiscontextmenurow a, #gridcontextmenu a {
+    padding  : 1px 3px 1px 18px;
     display  : block;
     position : relative;
     font-size: 10px;
     color    : #000;
-    padding  : 1px 3px 1px 18px;
     cursor   : pointer;
 }
 
