New rich text editor added.
Coupla css bugs to be shaken out:
* eg text shows bold in editor even when its not

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -846,8 +846,15 @@ label {
   z-index    : 10000003
  }
 
-#hn_jwysiwyg
+#hn_cleditor
 {
-  position : fixed;
+  position : absolute;
   display  : none;
+  }
+
+.cleditorMain
+{
+  position : absolute;
+  display  : none;
+  z-index  : 9999;
   }
