--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -276,7 +276,7 @@
       <a title="Merge Cells" class="toolbar-item" id="mergecells"></a>
       <a class="separator"></a>
       <a title="Make Wiki Input" class="toolbar-item" id="inlineinput"></a>
-      <a title="Make Wiki Rich Text Input" class="toolbar-item hn_hidden" id="inlinerichtextinput"></a>
+      <a title="Make Wiki Rich Text Input" class="toolbar-item" id="inlinerichtextinput"></a>
       <a title="Make Wiki Dropdown" class="toolbar-item" id="inlinedropdown"></a>
     <a class="separator"></a>
       <div class="expand forms" id="formsmenu">
@@ -903,7 +903,7 @@
     <script src="/hypernumbers/hn.layout.panes.js"></script>
     <script src="/hypernumbers/hn.layout.pane.js"></script>
     <script src="/hypernumbers/jquery.cookie.min.js"></script>
-    <script src="/hypernumbers/jquery.jstree.min.js"></script>
+    <script src="/hypernumbers/jquery.jstree.js"></script>
     <script src="/hypernumbers/finder.js"></script>
     <script src="/hypernumbers/hn.toolbar.js"></script>
     <script src="/hypernumbers/hn.callbacks.js"></script>
