finish off of the right-click menu

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -471,18 +471,30 @@
   </li>
 	<li><a name="mergecells">
 	    <span id="mergetext">Merge</span> Cells</a></li>
+	<li class="seperator"></li>
+  <li class="hn_gridcontextmenu_expand"><a>Insert Wiki Elements</a>
+    <ul class="hn_gridcontextsubmenu">
+    	<li><a name="insertwiki">Make Wiki Cell</a></li>
+    	<li><a name="insertwikirichtext">Make Wiki Rich Text Box</a></li>
+    	<li><a name="insertwikidropdown">Make Wiki Dropdown</a></li>
+    </ul>
+  </li>
 	<li><a name="createform">Create Form</a></li>
 	<li class="seperator"></li>
   <li class="hn_gridcontextmenu_expand"><a>Insert</a>
     <ul class="hn_gridcontextsubmenu">
     	<li><a name="insertright">Insert (shift right)</a></li>
 	   <li><a name="insertdown">Insert (shift down)</a></li>
+	   <li><a name="insertrowsbefore">Insert row(s)</a></li>
+	   <li><a name="insertcolsbefore">Insert column(s)</a></li>
     </ul>
   </li>
   <li class="hn_gridcontextmenu_expand"><a>Delete</a>
     <ul class="hn_gridcontextsubmenu">
 	    <li><a name="deleteleft">Delete (shift left)</a></li>
 	    <li><a name="deleteup">Delete (shift up)</a></li>
+	   <li><a name="deleterows">Delete row(s)</a></li>
+	   <li><a name="deletecols">Delete column(s)</a></li>
     </ul>
   </li>
 	<li class="seperator viewlogs"></li>
