--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -498,6 +498,13 @@
 	   <li><a name="deletecols">Delete column(s)</a></li>
     </ul>
   </li>
+	<li class="seperator"></li>
+  <li class="hn_gridcontextmenu_expand"><a>Defaults</a>
+    <ul class="hn_gridcontextsubmenu">
+	    <li><a name="defaultheightrows">Default height</a></li>
+	    <li><a name="defaultwidthcols">Default width</a></li>
+    </ul>
+  </li>
 	<li class="seperator viewlogs"></li>
 	<li><a name="viewlogs" class="viewlogs">View Cell's History</a></li>
   </ul>
